# fnal-vncpasswd

./: CMakeLists.txt  Makefile  fnal-vncpasswd.spec
.github/workflows/: ci.yaml  codeql.yaml
docs/: CMakeLists.txt  README.md  fnal-vncpasswd.1.adoc.in  pam_fnal_vncpasswd.8.adoc.in
src/: CMakeLists.txt  autoconf.h.in  syscall_ops.h  syscall_ops_default.c  vnc_crypto.h  vnc_path.c  vnc_path.h
src/fnal-vncpasswd/: CMakeLists.txt  main.c  passwd.c  passwd.h
src/pam/: CMakeLists.txt  auth.c  auth.h  pam_entry.c
test/: CMakeLists.txt  test_auth.c  test_framework.h  test_passwd.c  test_vnc_path.c
